--- a/content/post/funds122022.md
+++ b/content/post/funds122022.md
@@ -2,11 +2,31 @@
 title: "Update: Voya Funds Performance (November 2022)"
 date: 2022-11-23T23:55:58-05:00
 categories:
+- RobinHood
+- Retirement
 - Finance
+- 401k
+- Voya
 tags:
+- 401k
+- Investing
 keywords:
 ---
-It's still a bloodbath!
+While something like this should not have ever happened:\
+Corporate 401k'ers that didn't predict and got out when this all started in 2021/2022 are still getting screwed.
+There are others that stayed in the whole time, if that is you - please stop reading and return to your own La-La-Land of corporate ignorance when it comes to your retirment planning.
+
+This is about how to get back in, mostly. For those of us that got OUT at the beginning of the year and are trying to find a good time to get back in, please read along. 
+
+What we have here is a decline in inflationary forces, but still a looming uncertinty on the side of the consumers. The public is so confused at the moment that it will likely take another six months for that to even get back to levels known before in CS.
+
+With all the interest rates hikes put in place, the market is already responding.
+A first it was a few rallies, but the trend is still down for 2022.
+It's safe to say that everyone wants to close the last quarter of his balance sheet with as little damage as possible.
+
+The above are solid resarch mixed with personal opitions, the sad truth is shown below.
+Please review you asset allocation, this is who you are going to be during retirement, depending on which asset class your are in!!!/
+
 
 **Fund Name**|**Interest Rate**|**Unit Price As of 11/23/2022**|**Unit Price As of 11/22/2022**|**$ Change**|**% Change**|**YTD Return¹**
 :-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:
